<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="156dp"
        android:layout_height="141dp"
        android:contentDescription="@string/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/b7f72921cc1d42d48e4b5788583cf4f3" />

    <EditText
        android:id="@+id/etDeparture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/etDeparture"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toTopOf="@+id/ivLogo"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etDestination"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toBottomOf="@+id/etDeparture"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvPersonalData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/amarante"
        android:text="@string/tvPersonalData"
        android:textColor="@color/blue_logo"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPersonalData">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConsraintLayoutScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spSir"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:entries="@array/spSir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/etName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/spSir"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/spSir"
                app:layout_constraintTop_toTopOf="@+id/spSir"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tvSurname"
                style="@style/tvLabels"
                android:text="@string/tvApellidos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/etSurname" />

            <EditText
                android:id="@+id/etSurname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvSurname"
                app:layout_constraintTop_toBottomOf="@+id/etName"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tvAdress"
                style="@style/tvLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/tvAdress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/etAdress" />

            <EditText
                android:id="@+id/etAdress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvAdress"
                app:layout_constraintTop_toBottomOf="@+id/etSurname"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tvPhone"
                style="@style/tvLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/tvPhone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/etPhone" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvPhone"
                app:layout_constraintTop_toBottomOf="@+id/etAdress"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tvEmail"
                style="@style/tvLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/etEmail" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvEmail"
                app:layout_constraintTop_toBottomOf="@+id/etPhone"
                tools:ignore="SpeakableTextPresentCheck" />

            <Switch
                android:id="@+id/swInvalid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minHeight="48dp"
                android:text="@string/swInvalid"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/tvExtras"
                style="@style/tvLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tvExtras"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/swInvalid" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvExtras">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFirstAid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/chipFirstAid"
                    tools:ignore="TextContrastCheck" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFirstClass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chipFirstClass" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chipPet" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipWindow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chipWindow" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipBreakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chipBreakfast" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipLunch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chipLunch" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chipDinner" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/tvInsurance"
                style="@style/tvLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tvInsurance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvInsurance">

                <RadioButton
                    android:id="@+id/rbYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rbYes" />

                <RadioButton
                    android:id="@+id/rbNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rbNo" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvConditions"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/tvConditions"
                app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvInsurance"
                app:layout_constraintTop_toBottomOf="@+id/tvInsurance" />

            <CheckBox
                android:id="@+id/cbTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cbTerms"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <Button
                android:id="@+id/btBuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/amarante"
                android:text="@string/btBuy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cbTerms" />

            <ImageButton
                android:id="@+id/ibPremium"
                android:layout_width="179dp"
                android:layout_height="133dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/ibPremium"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/cani_ok"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tvPremium"
                style="@style/tvLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/tvPremium"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/ibPremium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btBuy" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>